--- a/vercel.json
+++ b/vercel.json
@@ -3,9 +3,10 @@
     "builds": [
         { "src": "./index.js", "use": "@vercel/node" }
     ],
-    "headers": [
+    "routes": [
         {
-            "source": "/(.*)",
+            "src": "/api/(.*)",
+            "dest": "/",
             "headers": [
                 { "key": "Access-Control-Allow-Origin", "value": "*" },
                 { "key": "Access-Control-Allow-Credentials", "value": "true" },
