Update vercel.json headers as dict

--- a/vercel.json
+++ b/vercel.json
@@ -7,9 +7,10 @@
         {
             "src": "/api/(.*)",
             "dest": "/",
-            "headers": [
-                { "Access-Control-Allow-Origin": "*" }
-            ]
+            "headers": 
+                { 
+                    "Access-Control-Allow-Origin": "*" 
+                }
         }
     ]
 }
